# Quasar

./: .gitignore  CMakeLists.txt  README.md  bnr  cmake_install.cmake  install_manifest.txt  libquasar.dylib  quasar.cpp  quasar.h  quasar_test  test.cpp
include/: quasar.h
src/: qtest.cpp  quasar.cpp
src/quasar/: quasar.cpp  quasar.h
