cmake_minimum_required(VERSION 3.2)

project(quasar-proj)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -O3")

set(CMAKE_INSTALL_PREFIX ${PROJECT_SOURCE_DIR})

set(QUASAR_INSTALL_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include)
set(QUASAR_INSTALL_BIN_DIR ${PROJECT_SOURCE_DIR}/bin)
set(QUASAR_INSTALL_LIB_DIR ${PROJECT_SOURCE_DIR}/lib)

set(QUASAR_HEADERS_DIR ${PROJECT_SOURCE_DIR}/src/quasar)

include_directories(${QUASAR_INSTALL_INCLUDE_DIR})
include_directories(${QUASAR_HEADERS_DIR})

add_subdirectory(src)
